# career_caddy_ai

./: .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  secrets.yml.example  sites.yml
.claude/: settings.local.json
agents/: agent_factory.py  career_caddy_agent.py  email_classifier_agent.py  job_email_to_caddy.py  job_extractor_agent.py  obstacle_agent.py  ollama_agent.py  onboarding_agent.py
browser/: engine.py  firefox_cookies.py  resident.py  session_store.py
lib/: api_tools.py  elicitation_tool.py  history.py  logfire_setup.py  toolsets.py  url_unwrap.py  usage_reporter.py  utils.py
lib/browser/: engine.py  resident.py
lib/models/: career_caddy.py
lib/scrape_graph/: __init__.py  _artifacts.py  apply_resolver.py  graph.py  nodes_extract.py  nodes_obstacle.py  nodes_scrape.py  state.py  tracing.py  url_canonicalize.py
mcp_servers/: browser_server.py  career_caddy_server.py  chat_server.py  gateway.py  public_server.py
pollers/: hold_poller.py
scrape_graph/: __init__.py  graph.py  nodes_extract.py  runner.py  tracing.py  url_canonicalize.py
scripts/: hold_poller.py  manual_login.py  score_poller.py
tests/: test_agent_factory.py  test_api_tools.py  test_apply_resolver.py  test_browser_server_retry.py  test_chat_agent_wizard.py  test_chat_prompt_answer_page.py  test_chat_server.py  test_debug_artifact_on_fail.py  test_elicitation_tool.py  test_obstacle_agent_node.py  test_obstacle_vision_and_demote.py  test_onboarding_agent.py  test_public_server.py  test_rememberme_reauth.py  test_scrape_and_score.py  test_scrape_graph_export.py  test_scrape_graph_state.py  test_tools_agent_wizard.py  test_toolsets.py  test_url_unwrap.py  test_validate_extraction.py
tools/: discover_sites.py  export_graph_structure.py  fetch_chromium.py  manual_login.py
