[project]
name = "career-caddy-ai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.14",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=3.0.0,<4",
    "rich<14",
    "html2text",
    "beautifulsoup4",
    "logfire",
    "pyyaml",
    "camoufox>=0.4.11",
    "jinja2>=3.0.0",
]

[project.scripts]
caddy-gateway  = "mcp_servers.gateway:main"
caddy-pipeline = "agents.job_email_to_caddy:run"
caddy-classify = "agents.email_classifier_agent:run"
caddy-public   = "mcp_servers.public_server:main"
caddy-fetch-browser = "camoufox.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["agents", "mcp_servers", "lib"]

[tool.hatch.build.targets.editable]
path = "."

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
